<resources>
    <string name="app_name">LoginExample</string>
    <string name="done_string">Done:</string>
    <string name="weather_string">Weather:</string>
    <string name="date_string">Date:</string>
    <string name="add_new_event_item_string">Add Event</string>
    <string name="event_string">Event</string>
    <string name="status_string">Status</string>
    <string name="not_done_string">Not Done</string>
    <string name="weather_sunny_string">Sunny</string>
    <string name="weather_raining_string">Raining</string>
    <string name="weather_snowing_string">Snowing</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000-00-00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="enter_event_string">Enter Event</string>
    <string name="stand_string">Stands Available: </string>
    <string name="number_stand_string"># of Stands</string>
    <string name="stand_prompt">Number of Stands</string>
    <string-array name="stand_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="number_clay_string"># of Clays</string>
    <string name="clay_prompt">Number of Clays</string>
    <string-array name="clay_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="clay_string">Clays Available: </string>
</resources>
