<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Title -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#ebf3f7"
        android:textColor="#00096f"
        >

        <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_string"
        android:background="#ebf3f7"
        android:textColor="#00096f"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TitleLabel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:background="#ebf3f7"
        android:textColor="#00096f"
        android:hint="@string/enter_event_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <!-- Status -->

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="25dp"
        android:text="@string/status_string"
        android:background="#ebf3f7"
        android:textColor="#00096f"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/statusGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/status"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:background="#ebf3f7"
        android:textColor="#00096f">

        <RadioButton
            android:id="@+id/statusDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_string"
            android:background="#ebf3f7"
            android:textColor="#00096f"/>

        <RadioButton
            android:id="@+id/statusNotDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/not_done_string"
            android:background="#ebf3f7"
            android:textColor="#00096f"/>
    </RadioGroup>

    <!-- Weather -->

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/statusGroup"
        android:layout_marginTop="25dp"
        android:text="@string/weather_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="#ebf3f7"
        android:textColor="#00096f"/>

    <RadioGroup
        android:id="@+id/weatherGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/weather"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/weather_string"

        android:textColor="#00096f">

        <RadioButton
            android:id="@+id/sunnyWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_sunny_string"
            android:background="#ebf3f7"
            android:textColor="#00096f"/>

        <RadioButton
            android:id="@+id/rainingWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/weather_raining_string"
            android:background="#ebf3f7"
            android:textColor="#00096f"/>

        <RadioButton
            android:id="@+id/snowingWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_snowing_string"
            android:background="#ebf3f7"
            android:textColor="#00096f"/>

    </RadioGroup>

    <!-- Time and Date -->

    <TextView
        android:id="@+id/Stands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/weatherGroup"
        android:layout_marginTop="25dp"
        android:text="@string/stand_string"
        android:background="#ebf3f7"
        android:textColor="#00096f"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/stand_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_stand_string"
        android:background="#ebf3f7"
        android:textColor="#00096f"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/clay_number"
        android:layout_alignBottom="@+id/clay_number"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/stand_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/stand_number"
        android:entries="@array/stand_arrays"
        android:prompt="@string/stand_prompt">
    </Spinner>

    <TextView
        android:id="@+id/clay_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_clay_string"
        android:background="#ebf3f7"
        android:textColor="#00096f"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/clay_spinner"
        android:layout_marginTop="22dp" />

    <Spinner
        android:id="@+id/clay_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/clay_arrays"
        android:prompt="@string/clay_prompt"
        android:layout_below="@+id/stand_number"
        android:layout_alignParentEnd="true">
    </Spinner>

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/clay_spinner"
        android:layout_marginTop="25dp"
        android:text="@string/time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="#ebf3f7"
        android:textColor="#00096f"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_and_date"
        android:text="@string/no_date_set_string"
        android:background="#a9e3ee"
        android:textColor="#00096f"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/time_and_date"
        android:text="@string/no_time_set_string"
        android:background="#a9e3ee"
        android:textColor="#00096f"/>

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date"
        android:text="@string/choose_date_string"
        android:background="#a9e3ee"
        android:textColor="#00096f"/>

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/date_picker_button"
        android:layout_below="@id/time"
        android:text="@string/choose_time_string"
        android:background="#a9e3ee"
        android:textColor="#00096f"/>

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string"
        android:background="#a9e3ee"
        android:textColor="#00096f"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string"
        android:background="#a9e3ee"
        android:textColor="#00096f"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_string"
        android:background="#a9e3ee"
        android:textColor="#00096f"
        android:layout_below="@+id/time_picker_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Stands"
            android:text="+"
            android:layout_alignEnd="@+id/TitleLabel" />
    </RelativeLayout>
</ScrollView>

